WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196633
[Mac WK2 iOS Sim] Layout Test imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=196633
Summary
[Mac WK2 iOS Sim] Layout Test imported/w3c/web-platform-tests/webrtc/RTCRtpRe...
Shawn Roberts
Reported
2019-04-04 16:20:42 PDT
The following layout test is flaky on Mac WK2 Release and Debug, iOS Simulator Release and Debug imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https.html Probable cause: Test was imported in
https://trac.webkit.org/changeset/243041/webkit
and has been a flaky failure and timeout on High Sierra. Also is a flaky failure on Mojave and iOS Simulator Release and Debug. Reproducible with: run-webkit-tests imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https.html --iterations 25 -f Failed twice, fails a lot more consistently in Debug. Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2FRTCRtpReceiver-getSynchronizationSources.https.html
Diff: --- /Volumes/Data/slave/mojave-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https-expected.txt +++ /Volumes/Data/slave/mojave-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https-actual.txt @@ -9,6 +9,6 @@ PASS [video] getSynchronizationSources() does not contain SSRCs older than 10 seconds FAIL [video] RTCRtpSynchronizationSource.timestamp is comparable to performance.timeOrigin + performance.now() assert_true: expected true got false PASS [video] RTCRtpSynchronizationSource.source is a number -FAIL [audio-only] RTCRtpSynchronizationSource.audioLevel is a number [0, 1] assert_less_than_equal: expected a number less than or equal to 1 but got 23 +FAIL [audio-only] RTCRtpSynchronizationSource.audioLevel is a number [0, 1] assert_less_than_equal: expected a number less than or equal to 1 but got 9 FAIL [audio-only] RTCRtpSynchronizationSource.voiceActivityFlag is a boolean assert_equals: expected "boolean" but got "undefined"
Attachments
Patch
(5.67 KB, patch)
2019-04-25 17:14 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-04 16:21:20 PDT
<
rdar://problem/49627667
>
Ryan Haddad
Comment 2
2019-04-05 14:55:46 PDT
Marked test as flaky in
https://trac.webkit.org/changeset/243945/webkit
youenn fablet
Comment 3
2019-04-25 17:14:03 PDT
Created
attachment 368290
[details]
Patch
WebKit Commit Bot
Comment 4
2019-04-26 09:29:21 PDT
Comment on
attachment 368290
[details]
Patch Clearing flags on attachment: 368290 Committed
r244689
: <
https://trac.webkit.org/changeset/244689
>
WebKit Commit Bot
Comment 5
2019-04-26 09:29:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug